--- a/HumanResource/PersonApp/templates/index.html
+++ b/HumanResource/PersonApp/templates/index.html
@@ -27,13 +27,16 @@
                 <div class="person-info">
                     <h2 class="person-name">{{p.fname}} {{p.lname}}</h2>
                     <p class="person-title">{{p.age }}</p>
-                    <p class="person-bio">Visionary leader with 15 years of experience in business strategy and team development.</p>
+                    <p class="person-bio"> {%if p.gender %} Male {%else%}Female{%endif%}</p> 
                     <div class="person-contact">
                         <span class="contact-item"><i class="fas fa-phone"></i> {{p.phone}}</span>
                     </div>
                 </div>
             </div>
             {% endfor %}
+
+          
+
 
         </div>
     </div>
